# mypkgproj

./: .gitignore  pyproject.toml  readme.txt  requirements.txt
src/mypkg/: __init__.py  core1.py
src/mypkg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_core1.py  test_func.py
