[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mypkg"
version = "0.1.0"
description = "Short description of mypackage"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Kostya Shilkrot", email = "you@example.com" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/you/mypkg"

[tool.setuptools.packages.find]
where = ["src"]

# Optional: console scripts
[project.scripts]
mypkg = "mypkg.core1:main"